--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&display=swap");
 
 * {
   margin: 0;
@@ -7,10 +7,10 @@
 }
 
 :root {
-  --clr-white: #FFFFFF;
+  --clr-white: #ffffff;
   --clr-black: #202020;
   --clr-grey: #707070;
-  --clr-blue: #6C63FF;
+  --clr-blue: #6c63ff;
   --clr-blue-2: #4c46b6;
   --clr-green: #4fb646;
 }
@@ -83,7 +83,7 @@ nav {
   border-radius: 4px;
 
   font-family: "Open Sans";
-  font-size: 1.10em;
+  font-size: 1.1em;
   font-weight: 600;
 
   cursor: pointer;
@@ -141,6 +141,17 @@ header {
 
 /* ------------------------------------------------------ */
 /* -- CARDS -- */
+
+.hardhatNet {
+  max-width: 60vw;
+  text-align: center;
+  position: relative;
+  transform: translateX(50%);
+  background-color: #6c63ff;
+  border-radius: 10%;
+  padding: 2%;
+  color: lightgray;
+}
 
 .cards__section {
   max-width: 1200px;
@@ -207,7 +218,7 @@ header {
 
 .card__info p {
   font-family: "Open Sans";
-  font-size: 0.90em;
+  font-size: 0.9em;
   margin-top: 5px;
 }
 
@@ -303,7 +314,7 @@ header {
   border-radius: 4px;
 
   font-family: "Open Sans";
-  font-size: 1.10em;
+  font-size: 1.1em;
   font-weight: 600;
 
   cursor: pointer;
